--- a/app/views/international-arrivals/v4/index.html
+++ b/app/views/international-arrivals/v4/index.html
@@ -41,7 +41,6 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">What you need before you start</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <!-- <li>Check the correct travel package for you (see under start button)</li> -->
         <li>Delivery address in the UK</li>
         <li>Passport number</li>
         <li>Flight or Eurostar number or ferry name</li>
@@ -55,12 +54,17 @@
         If you need any help with your order, including changing it, getting a refund or replacing a test kit, call:
       </p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>119 from the UK</li>
-        <li>+44 (0) 151 676 0491 from outside the UK</li>
+        <li>0151 676 0491 from the UK</li>
+        <li>+44 (0) 0151 676 0491 from outside the UK</li>
       </ul>
       <p class="govuk-body">
-        Lines open 7am to 11pm.<br><br>
-        For more details see our terms <a href="#">terms and conditions</a> (opens in a new tab).
+        Lines open 7am to 11pm
+      </p>
+      <p class="govuk-body">
+        To request a refund, call this number before your test kit is sent (usually the day you're due to arrive in the UK) or we cannot guarantee a full refund. You'll need your order details, including your booking reference number.
+      </p>
+      <p class="govuk-body">
+        For more details see our <a href="#">terms and conditions</a>.
       </p>
 
       <a href="/international-arrivals/{{version}}/name" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
@@ -72,16 +76,15 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Which travel test package do you need?</h2>
       <p class="govuk-body">
-        Links open in a new tab:<br>
-        <a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" target="blank" class="govuk-link">Travel test package rules for international arrival into England</a><br>
-        <a href="https://gov.wales/rules-international-travel-and-wales-coronavirus" target="blank" class="govuk-link">Travel test package rules for international arrival into Wales</a><br>
-        <a href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/" target="blank" class="govuk-link">Travel test package rules for international arrival into Scotland</a><br>
-        <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-travel-advice" target="blank" class="govuk-link">Travel test package rules for international arrival into Northern Ireland</a>
+        <a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" class="govuk-link">Travel test package rules for international arrival into England</a><br>
+        <a href="https://gov.wales/rules-international-travel-and-wales-coronavirus" class="govuk-link">Travel test package rules for international arrival into Wales</a><br>
+        <a href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/" class="govuk-link">Travel test package rules for international arrival into Scotland</a><br>
+        <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-travel-advice" class="govuk-link">Travel test package rules for international arrival into Northern Ireland</a>
       </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Passenger locator form (PLF)</h2>
       <p class="govuk-body">
-        You must complete this form online within 48 hours of the start of your journey to the UK: <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">https://www.gov.uk/provide-journey-contact-details-before-travel-uk</a> (opens in a new tab).
+        You must complete the <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">passenger locator form</a> (PLF) within 48 hours of the start of your journey to the UK.
       </p>
 
     </div>
