--- a/app/views/international-arrivals/v3/index.html
+++ b/app/views/international-arrivals/v3/index.html
@@ -37,7 +37,6 @@
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Who is this for?</h2>
       <p class="govuk-body">
         You can order travel test packages for yourself and other people. They must be travelling with you and have the same delivery address as you.
-        <!-- If your travel plans change after ordering and paying for your tests, you can change your order or get a refund. -->
       </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">What you need before you start</h2>
@@ -53,8 +52,10 @@
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">How to request a refund or replacement test kit</h2>
       <p class="govuk-body">
         To request a refund, call this number before your test kit is sent (usually the day you're due to arrive in the UK) or we cannot guarantee a full refund. You'll need your order details, including your booking reference number.<br><br>
-        You can also call this number to arrange a replacement kit.<br><br>
-        For more details see our terms <a href="#">terms and conditions</a> (opens in a new tab).
+        You can also call this number to arrange a replacement kit.
+      </p>
+      <p class="govuk-body">
+        For more details see our <a href="#">terms and conditions</a>.
       </p>
 
       <a href="/international-arrivals/{{version}}/travel-package-exempt" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
@@ -66,16 +67,15 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Which travel test package do you need?</h2>
       <p class="govuk-body">
-        Links open in a new tab:<br>
-        <a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" target="blank" class="govuk-link">Travel package rules for international arrival into England</a><br>
-        <a href="https://gov.wales/rules-international-travel-and-wales-coronavirus" target="blank" class="govuk-link">Travel package rules for international arrival into Wales</a><br>
-        <a href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/" target="blank" class="govuk-link">Travel package rules for international arrival into Scotland</a><br>
-        <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-travel-advice" target="blank" class="govuk-link">Travel package rules for international arrival into Northern Ireland</a>
+        <a href="https://www.gov.uk/guidance/travel-to-england-from-another-country-during-coronavirus-covid-19" class="govuk-link">Travel package rules for international arrival into England</a><br>
+        <a href="https://gov.wales/rules-international-travel-and-wales-coronavirus" class="govuk-link">Travel package rules for international arrival into Wales</a><br>
+        <a href="https://www.gov.scot/publications/coronavirus-covid-19-international-travel-quarantine/"  class="govuk-link">Travel package rules for international arrival into Scotland</a><br>
+        <a href="https://www.nidirect.gov.uk/articles/coronavirus-covid-19-travel-advice" class="govuk-link">Travel package rules for international arrival into Northern Ireland</a>
       </p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Passenger locator form (PLF)</h2>
       <p class="govuk-body">
-        You must complete this form online within 48 hours of the start of your journey to the UK: <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">https://www.gov.uk/provide-journey-contact-details-before-travel-uk</a> (opens in a new tab).
+        You must complete the <a href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk" class="govuk-link">passenger locator form</a> (PLF) within 48 hours of the start of your journey to the UK.
       </p>
 
     </div>
