--- a/app/views/international-arrivals/v4/check-your-answers.html
+++ b/app/views/international-arrivals/v4/check-your-answers.html
@@ -54,7 +54,7 @@ Appleseed{% set version = "v4" %}
             Departure country
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['country-autocomplete'] or 'Hamburg' }}
+            {{ data['departure-country-v4'] or 'Hamburg' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/international-arrivals/{{version}}/departure-country">
@@ -171,7 +171,7 @@ Appleseed{% set version = "v4" %}
             Date of birth
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['date-of-birth-day'] or '2 June 1984' }} {{ data['date-of-birth-month'] }} {{ data['date-of-birth-year'] }}
+            {{ data['dob-day'] or '1 January 1990' }} {{ data['dob-month'] }} {{ data['dob-year'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/international-arrivals/{{version}}/date-of-birth">
