--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -25,22 +25,38 @@
 
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
-      <p class="govuk-body">
-        You can <strong>add up to 3 people</strong> you live with for testing, unless you're getting a test after a positive day 2 travel test. You can only order one day 2 travel test at a time. <br><br>
-        If you need tests for <strong>more than yourself and 3 other people</strong>, you'll need to complete this journey again and place a separate order.<br><br>
-        <strong>For test sites:</strong><br>
-        If you're arriving by motorbike, you can only take one other person you live with. They must wear full helmet and visor.<br><br>
-        If you’re arriving by car or small van, everyone must be in the same vehicle and sit next to a window that opens. You'll stay in your vehicle during your visit.<br><br>
-        <strong>For home testing:</strong><br>
-        You cannot order more than 4 home test kits at a time.
-      </p>
+        <p class="govuk-body">
+          You can <strong>add up to 3 people</strong> you live with for testing.
+        </p>
+        <p class="govuk-body">
+          If you need tests for <strong>more than yourself and 3 other people</strong>, you'll need to complete this journey again and place a separate order.
+        </p>
+        <p class="govuk-body">
+        You can only order one follow-up PCR travel test at a time.
+        </p>
+        <p class="govuk-body">
+          <strong>For test sites:</strong>
+        </p>
+        <p class="govuk-body">
+          If you're arriving by motorbike, you can only take one other person you live with. They must wear full helmet and visor.
+        </p>
+        <p class="govuk-body">
+          If you’re arriving by car or small van, everyone must be in the same vehicle and sit next to a window that opens. You'll stay in your vehicle during your visit.
+        </p>
+        <p class="govuk-body">
+          <strong>For home testing:</strong>
+        </p>
+        <p class="govuk-body">
+          You cannot order more than 4 home test kits at a time.
+        </p>
+
 
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"><strong class="govuk-!-font-size-24">PCR test</strong></th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-half"></th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"><strong class="govuk-!-font-size-24">PCR test</strong><span class="govuk-visually-hidden">Name</span></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-half"><span class="govuk-visually-hidden">Personal details</span></th>
+            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter"><span class="govuk-visually-hidden">Options</span></th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -126,7 +142,7 @@
             </td>
             <td class="govuk-table__cell"><p class="govuk-body-m">
               <a href="/antigen/{{version}}/global-registration/check-your-answers">Edit details</a><br>
-              <a href="/antigen/{{version}}/global-registration/people-confirmed" class="govuk-link"">Remove</a>
+              <a href="/antigen/{{version}}/global-registration/people-confirmed" class="govuk-link">Remove</a>
             </p></td>
           </tr>
         </tbody>
@@ -136,34 +152,23 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text govuk-!-font-size-19">
           <span class="govuk-warning-text__assistive">Warning</span>
-          If you have symptoms, people you live with should also get a PCR test.
+          People you live with who do not have symptoms can only get a PCR test if they've been in contact with someone who's tested positive for COVID-19, or they have been asked to get a PCR test. Ordering unnecessary tests is wasting NHS resources.
         </strong>
       </div>
 
-      <form class="form" action="#" method="post" style="display: inline-block;">
+      <div class="inline-buttons-wrapper govuk-!-margin-top-8">
+        <form class="form" action="/antigen/{{version}}/global-registration/name-person-1" method="post">
+          <button class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">
+            Save and add another person you live with
+          </button>
+        </form>
 
-        <button class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Save and add another person you live with</button>
-
-      </form>
-
-      <!-- routing done with nunjucks here because of an issue with Safari -->
-      {% if data['way-to-test'] == "drive-through" or data['way-to-test'] == "walk-through" %}
-
-      <form class="form" action="/antigen/{{version}}/site-appointment-booking/find-test-site" method="post" style="display: inline-block;">
-
-        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
-
-      </form>
-
-      {% else %}
-
-      <form class="form" action="/antigen/{{version}}/order-home-test-kit/" method="post" style="display: inline-block;">
-
-        <button class="govuk-button" data-module="govuk-button">Save and continue</button>
-
-      </form>
-
-      {% endif %}
+        <form class="form" action="/antigen/{{version}}/site-appointment-booking/find-test-site" method="post">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+        </form>
+    </div>
 
     </div>
   </div>
