--- a/app/views/antigen/v2/refer-and-triage/follow-up-test-reason.html
+++ b/app/views/antigen/v2/refer-and-triage/follow-up-test-reason.html
@@ -32,17 +32,12 @@
                 {{ pageTitle }}
               </h1>
             </legend>
+
             <div class="govuk-radios govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="follow-up-test-reason-1" name="follow-up-test-reason" type="radio" value="After entering the UK, they got a positive day 2 travel test result" {{ checked("follow-up-test-reason", "After entering the UK, they got a positive day 2 travel test result") }}>
-                <label class="govuk-label govuk-radios__label" for="follow-up-test-reason-1">
-                  After entering the UK, they got a positive day 2 travel test result
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="follow-up-test-reason-2" name="follow-up-test-reason" type="radio" value="They got a positive lateral flow test result with no recent international travel" {{ checked("follow-up-test-reason", "They got a positive lateral flow test result with no recent international travel") }}>
+                <input class="govuk-radios__input" id="follow-up-test-reason-2" name="follow-up-test-reason" type="radio" value="They got a positive lateral flow test result" {{ checked("follow-up-test-reason", "They got a positive lateral flow test result") }}>
                 <label class="govuk-label govuk-radios__label" for="follow-up-test-reason-2">
-                  They got a positive lateral flow test result with no recent international travel
+                  They got a positive lateral flow test result
                 </label>
               </div>
               <div class="govuk-radios__item">
