--- a/app/views/antigen/v4/refer-and-triage/index.html
+++ b/app/views/antigen/v4/refer-and-triage/index.html
@@ -1,5 +1,5 @@
 {% set version = "v4" %}
-{% set pageTitle = "What’s the name of the person who needs a test?" %}
+{% set pageTitle = "What is the name of the person who needs a test?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -31,7 +31,7 @@
       <form action="/antigen/{{version}}/refer-and-triage/mobile-number" method="post">
 
         <fieldset class="govuk-fieldset">
-        
+
           <div class="govuk-form-group">
             <label class="govuk-label" for="first-name">
               First name
@@ -45,7 +45,7 @@
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="last-name" name="last-name" type="text" value="{{ data['last-name'] }}">
           </div>
-        
+
         </fieldset>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
