--- a/app/views/international-arrivals/v4/check-your-answers-person-1.html
+++ b/app/views/international-arrivals/v4/check-your-answers-person-1.html
@@ -1,4 +1,4 @@
-AppleseedSophie{% set version = "v4" %}
+{% set version = "v4" %}
 {% set pageTitle = "Check your answers" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
@@ -15,7 +15,7 @@ AppleseedSophie{% set version = "v4" %}
   </p>
 </div>
 
-<a class="govuk-back-link" href="/international-arrivals/{{version}}/gender-person-1">Back</a>
+<a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -25,7 +25,7 @@ AppleseedSophie{% set version = "v4" %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <form action="/international-arrivals/{{version}}/people-confirmed-person-1" method="post" novalidate>
+      <form action="/international-arrivals/{{version}}/action4/check-your-answers-person-1" method="post" novalidate>
 
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">{{ pageTitle }}</h1>
 
@@ -136,20 +136,22 @@ AppleseedSophie{% set version = "v4" %}
             </a>
           </dd>
         </div>
+        {% if data['red-country-travel'] !== "Yes" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Travel package
+            Travel test package
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['travel-route-same-person-1'] or 'Day 2 and Day 8 test' }}
+            {{ data['travel-route-same-person-1'] or 'Day 2 and day 8 test' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/international-arrivals/{{version}}/travel-route-same-person-1">
               Change
-              <span class="govuk-visually-hidden">travel package</span>
+              <span class="govuk-visually-hidden">travel test package</span>
             </a>
           </dd>
         </div>
+        {% endif %}
       </dl>
 
       <div style="display: flex; justify-content: space-between; align-items: flex-end;">
@@ -237,7 +239,7 @@ AppleseedSophie{% set version = "v4" %}
             Email address
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['email-address-person-1'] or 'jAppleseed@example.co.uk' }}
+            {{ data['email-address-person-1'] or 's.appleseed@example.co.uk' }}
           </dd>
           <dd class="govuk-summary-list__actions">
             <a href="/international-arrivals/{{version}}/email-address-person-1">
@@ -261,69 +263,13 @@ AppleseedSophie{% set version = "v4" %}
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Had coronavirus vaccine
+            Had coronavirus vaccine?
           </dt>
           <dd class="govuk-summary-list__value">
-            {% if data['vaccine-person-1'] == "Yes, they've had 1 dose" and data['vaccine-date-person-1'] == "Less than 7 days ago" %}
-            1 dose, less than 7 days ago
-            {% elseif data['vaccine-person-1'] == "Yes, they've had 1 dose" and data['vaccine-date-person-1'] == "7 to 14 days ago" %}
-            1 dose, 7 to 14 days ago
-            {% elseif data['vaccine-person-1'] == "Yes, they've had 1 dose" and data['vaccine-date-person-1'] == "More than 14 days ago" %}
-              {% if data['vaccine-month-person-1'] == "1" or data['vaccine-month-person-1'] == "01" %}
-              1 dose, January {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "2" or data['vaccine-month-person-1'] == "02" %}
-              1 dose, February {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "3" or data['vaccine-month-person-1'] == "03" %}
-              1 dose, March {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "4" or data['vaccine-month-person-1'] == "04" %}
-              1 dose, April {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "5" or data['vaccine-month-person-1'] == "05" %}
-              1 dose, May {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "6" or data['vaccine-month-person-1'] == "06" %}
-              1 dose, June {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "7" or data['vaccine-month-person-1'] == "07" %}
-              1 dose, July {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "8" or data['vaccine-month-person-1'] == "08" %}
-              1 dose, August {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "9" or data['vaccine-month-person-1'] == "09" %}
-              1 dose, September {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "10" %}
-              1 dose, October {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "11" %}
-              1 dose, November {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "12" %}
-              1 dose, December {{ data['vaccine-year-person-1'] }}
-              {% endif %}
-            {% elseif data['vaccine-person-1'] == "Yes, they've had 2 doses" and data['vaccine-date-person-1'] == "Less than 7 days ago" %}
-            2 doses, less than 7 days ago
-            {% elseif data['vaccine-person-1'] == "Yes, they've had 2 doses" and data['vaccine-date-person-1'] == "7 to 14 days ago" %}
-            2 doses, 7 to 14 days ago
-            {% elseif data['vaccine-person-1'] == "Yes, they've had 2 doses" and data['vaccine-date-person-1'] == "More than 14 days ago" %}
-              {% if data['vaccine-month-person-1'] == "1" or data['vaccine-month-person-1'] == "01" %}
-              2 doses, January {{ data['vaccine-year'] }}
-              {% elseif data['vaccine-month-person-1'] == "2" or data['vaccine-month-person-1'] == "02" %}
-              2 doses, February {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "3" or data['vaccine-month-person-1'] == "03" %}
-              2 doses, March {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "4" or data['vaccine-month-person-1'] == "04" %}
-              2 doses, April {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "5" or data['vaccine-month-person-1'] == "05" %}
-              2 doses, May {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "6" or data['vaccine-month-person-1'] == "06" %}
-              2 doses, June {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "7" or data['vaccine-month-person-1'] == "07" %}
-              2 doses, July {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "8" or data['vaccine-month-person-1'] == "08" %}
-              2 doses, August {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "9" or data['vaccine-month-person-1'] == "09" %}
-              2 doses, September {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "10" %}
-              2 doses, October {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "11" %}
-              2 doses, November {{ data['vaccine-year-person-1'] }}
-              {% elseif data['vaccine-month-person-1'] == "12" %}
-              2 doses, December {{ data['vaccine-year-person-1'] }}
-              {% endif %}
+            {% if data['vaccine-person-1'] == "Yes, they've had 1 dose" %}
+            Yes, they've had 1 dose(s)
+            {% elseif data['vaccine-person-1'] == "Yes, they've had 2 doses" %}
+            Yes, they've had 2 dose(s)
             {% else %}
             No
             {% endif %}
@@ -335,6 +281,64 @@ AppleseedSophie{% set version = "v4" %}
             </a>
           </dd>
         </div>
+        {% if data['vaccine-person-1'] != "No" %}
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            When did you have the vaccine?
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{ data['vaccine-date-person-1'] }}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a href="/international-arrivals/{{version}}/vaccine-date">
+              Change
+              <span class="govuk-visually-hidden">Coronavirus vaccine</span>
+            </a>
+          </dd>
+        </div>
+        {% endif %}
+        {% if data['vaccine-date-person-1'] == "More than 14 days ago" %}
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Date of vaccine
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {% if data['vaccine-month-person-1'] == "1" or data['vaccine-month-person-1'] == "01" %}
+            January {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "2" or data['vaccine-month-person-1'] == "02" %}
+            February {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "3" or data['vaccine-month-person-1'] == "03" %}
+            March {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "4" or data['vaccine-month-person-1'] == "04" %}
+            April {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "5" or data['vaccine-month-person-1'] == "05" %}
+            May {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "6" or data['vaccine-month-person-1'] == "06" %}
+            June {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "7" or data['vaccine-month-person-1'] == "07" %}
+            July {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "8" or data['vaccine-month-person-1'] == "08" %}
+            August {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "9" or data['vaccine-month-person-1'] == "09" %}
+            September {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "10" %}
+            October {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "11" %}
+            November {{ data['vaccine-year-person-1'] }}
+            {% elseif data['vaccine-month-person-1'] == "12" %}
+            December {{ data['vaccine-year-person-1'] }}
+            {% else %}
+            May 2021
+            {% endif %}
+          </dd>
+          <dd class="govuk-summary-list__actions">
+            <a href="/international-arrivals/{{version}}/vaccine-date">
+              Change
+              <span class="govuk-visually-hidden">Coronavirus vaccine</span>
+            </a>
+          </dd>
+        </div>
+        {% endif %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Ethnic group
