--- a/app/views/international-arrivals/v4/confirmation-red.html
+++ b/app/views/international-arrivals/v4/confirmation-red.html
@@ -1,5 +1,5 @@
 {% set version = "v4" %}
-{% set pageTitle = "Here are your travel test package details" %}
+{% set pageTitle = "Here are your red self-quarantine package details" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
 
@@ -27,18 +27,17 @@
       <h1 class="govuk-panel__title">
         {{pageTitle}}<br>
       </h1>
-      <p class="govuk-heading-xl" style="color: white; font-weight: 200;">
-        <!-- Booking reference number<br><strong>HJK83JD</strong> -->
-        
-      </p>
+      <!-- <p class="govuk-heading-xl" style="color: white; font-weight: 200;">
+        Booking reference number<br><strong>RED83JD</strong>
+      </p> -->
     </div>
 
     <p class="govuk-body">
-      {% if data['first-name-person-1'] %}
-      We've received your order for 2 travel test packages. If you’re travelling with other people on this order, we’ve sent separate emails confirming the details of each person.
-      {% else %}
-      We've received your order for 1 travel test package. If you’re travelling with other people on this order, we’ve sent separate emails confirming the details of each person.
-      {% endif %}
+        {% if data['first-name-person-1'] %}
+        We've received your order for 2 red self-quarantine packages. If you’re travelling with other people on this order, we’ve sent separate emails confirming the details of each person.
+        {% else %}
+        We've received your order for a red self-quarantine package. If you’re travelling with other people on this order, we’ve sent separate emails confirming the details of each person.
+        {% endif %}
     </p>
     <!-- <p class="govuk-body">
       You may need to show these details when you're travelling, so keep this email with you.
@@ -49,7 +48,7 @@
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Jon Appleseed
+          Sarah Philips
         </dt>
         <dd class="govuk-summary-list__value">
           Date of birth: 4 Jan 1982 <br />
@@ -58,16 +57,16 @@
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Sophie Appleseed
+          Tom Philips
         </dt>
         <dd class="govuk-summary-list__value">
           Date of birth: 4 Jan 1989 <br />
-          Unique booking reference: NHSRD1234987
+          Unique booking reference: NHSRD1234567
         </dd>      
       </div>
     </dl>
 
-    <h3 class="govuk-heading-s">What happens next</h3>
+    <h3 class="govuk-heading-s govuk-!-margin-top-6">What happens next</h3>
     <p class="govuk-body">
       Enter your unique booking reference in the <a class="govuk-body" href="https://www.gov.uk/provide-journey-contact-details-before-travel-uk">passenger locator form</a> (PLF).
     </p>
@@ -75,9 +74,18 @@
       You can submit the PLF any time in the 48 hours before you arrive in the UK. You will not be able to travel if you do not complete the PLF.
     </p>
 
-    <p class="govuk-body">
-      <a href="https://book-travel-test-enter-uk.service.gov.uk/help/terms-and-conditions">See our terms and conditions</a>
+    <p class="govuk-body"><a href="https://book-travel-test-enter-uk.service.gov.uk/help/terms-and-conditions" class="govuk-link">See our terms and conditions</a></p>
+
+    <h3 class="govuk-heading-s govuk-!-margin-top-6">How to quarantine</h3>
+    <p class="govuk-body govuk-!-margin-bottom-2">
+      After you arrive in England, you must:
     </p>
+    <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-3">
+      <li>go straight to your place of quarantine and do not take public transport</li>
+      <li>quarantine for 10 full days</li>
+      <li>quarantine for 10 more days if you test positive on either day 2 or day 8</li>
+    </ul>
+    <p class="govuk-body"><a href="#" class="govuk-link">View more information on how to quarantine.</a></p>
 
     <h3 class="govuk-heading-s govuk-!-margin-top-6">If your travel plans change</h3>
     <p class="govuk-body govuk-!-margin-bottom-2">
