--- a/app/views/international-arrivals/v4/delivery-address.html
+++ b/app/views/international-arrivals/v4/delivery-address.html
@@ -15,11 +15,20 @@
     </p>
   </div>
 
-  {% if data['first-name-person-1'] %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed-person-1">Back</a>
+  {% if data['red-country-travel'] == "Yes" %}
+    {% if data['first-name-person-1'] %}
+    <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed-person-1-red">Back</a>
+    {% else %}
+    <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed-red">Back</a>
+    {% endif %}
   {% else %}
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed">Back</a>
+    {% if data['first-name-person-1'] %}
+    <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed-person-1">Back</a>
+    {% else %}
+    <a class="govuk-back-link" href="/international-arrivals/{{version}}/people-confirmed">Back</a>
+    {% endif %}
   {% endif %}
+  
 
 {% endblock %}
 
@@ -38,9 +47,9 @@
             {{ pageTitle }}
           </h1>
         </legend>
-        <span id="delivery-address-hint" class="govuk-body">
+        <div id="delivery-address-hint" class="govuk-hint">
           We'll send the test kits to this address. You should receive them in time to take your day 2 test.<br><br>
-        </span>
+        </div>
 
           <div id="content-1">
             <div class="govuk-form-group">
