--- a/app/views/international-arrivals/v4/index-red.html
+++ b/app/views/international-arrivals/v4/index-red.html
@@ -1,5 +1,5 @@
 {% set version = "v4" %}
-{% set pageTitle = "Book a travel test package to enter the UK" %}
+{% set pageTitle = "Book a red self-quarantine package to enter England" %}
 
 {% extends "includes/layout-intl-arrivals.html" %}
 
@@ -23,12 +23,18 @@
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        Order and pay for coronavirus (COVID-19) tests if you're travelling to the UK from a country that's not on the red list. You need to do this at least 2 days before you arrive in the UK. Check the correct travel test package for you (see links under start button).
+        If you’ll be in a red list country in the 10 days before you arrive in England, you need a red self-quarantine package. You must order a red self-quarantine package at least 2 days before you arrive in England.
       </p>
-      <ul class="govuk-list govuk-list--bullet">
+
+      <!-- <ul class="govuk-list govuk-list--bullet">
         <li>A travel test package of 1 PCR test (day 2) costs £68</li>
         <li>A travel test package of 2 PCR tests (day 2 and day 8) costs £136</li>
-      </ul>
+      </ul> -->
+
+      <p class="govuk-body">
+        A red self-quarantine package contains 2 PCR tests (day 2 and day 8) and costs £300.
+      </p>
+
       <p class="govuk-body">
         We'll send tests to the UK delivery address you give us. You should get them in time to take your day 2 test.<br><br>
         Day 1 counts as the day after your arrival in the UK.
@@ -36,10 +42,10 @@
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Who is this for?</h2>
       <p class="govuk-body">
-        You can order travel test packages for yourself and up to 9 other people. They must be travelling with you and have the same delivery address as you.
+        You can order red self-quarantine packages for yourself and up to 9 other people. They must be travelling with you and have the same delivery address as you.
       </p>
 
-      <p class="govuk-body">If you or anyone you’re travelling with will be in a red list country in the 10 days before you arrive in the UK, that person needs to order a <a href="index-red">red self-quarantine package</a>.</p>
+      <p class="govuk-body">If you or anyone you're travelling with will not be in a red list country in the 10 days before you arrive in the UK, that person needs to <a href="index">order a travel test package</a>.</p>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">What you need before you start</h2>
       <ul class="govuk-list govuk-list--bullet">
@@ -68,19 +74,19 @@
       <p class="govuk-body">
         For more details see our <a href="#">terms and conditions</a>.
       </p>
-      
-      <form action="/international-arrivals/{{version}}/final-destination" method="post" novalidate>
 
-        <input type="hidden" name="red-country-travel" id="red-country-travel" value="No">
-          
-        <button data-prevent-double-click="true" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
-          Start now
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-          </svg>
-        </button>
+    <form action="/international-arrivals/{{version}}/final-destination" method="post" novalidate>
+
+      <input type="hidden" name="red-country-travel" id="red-country-travel" value="Yes">
         
-      </form>
+      <button data-prevent-double-click="true" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-7 govuk-button--start" data-module="govuk-button">
+        Start now
+        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+        </svg>
+      </button>
+      
+    </form>
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Which travel test package do you need?</h2>
       <p class="govuk-body">
