--- a/app/views/international-arrivals/v4/nhs-number-known-person-1.html
+++ b/app/views/international-arrivals/v4/nhs-number-known-person-1.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  {% if data['ethnic-group-person-1'] == "Asian or Asian British" %}
+  <!-- {% if data['ethnic-group-person-1'] == "Asian or Asian British" %}
   <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-asian-person-1">Back</a>
   {% elseif data['ethnic-group-person-1'] == "Black, African, Black British or Caribbean" %}
   <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-black-person-1">Back</a>
@@ -27,7 +27,9 @@
   <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-background-another-person-1">Back</a>
   {% else %}
   <a class="govuk-back-link" href="/international-arrivals/{{version}}/ethnic-group-person-1">Back</a>
-  {% endif %}
+  {% endif %} -->
+
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -47,17 +49,17 @@
               </h1>
             </legend>
 
-            <span id="nhs-number-known-hint" class="govuk-body">
+            <p class="govuk-body">
               An NHS number is a 10-digit number, for example, 485 777 3456. You can find it on any letter the NHS has sent you, on a prescription, or by logging in to a GP practice online service.<br><br>
               In Scotland, it's known as CHI number. In Northern Ireland, it's known as an H&C number.<br><br>
               It's OK if you do not have an NHS number or you do not live in the UK, you can still continue.
-            </span>
+            </p>
 
-            <p class="govuk-!-margin-top-5"><a class="govuk-link" href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/">Look up your NHS number</a></p>
+            <p class="govuk-!-margin-top-5"><a class="govuk-link" href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/" target="blank">Look up NHS number (opens in new tab)</a></p>
 
             <div class="govuk-form-group govuk-!-margin-bottom-3">
               <label class="govuk-label" for="nhs-number-person-1">
-                <strong>What is {{ data['first-name-person-1'] or 'Jane' }} {{ data['last-name-person-1'] or 'Wilson' }}'s NHS number?</strong>
+                <strong>What is {{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Appleseed' }}'s NHS number?</strong>
               </label>
               <input class="govuk-input govuk-input--width-10" id="nhs-number-person-1" name="nhs-number-person-1" type="text" value="{{ data['nhs-number-person-1'] }}">
             </div>
@@ -70,7 +72,7 @@
             Continue
           </button>
         
-          <a class="govuk-button govuk-button--secondary" href="/international-arrivals/{{version}}/registered-with-GP">Continue without NHS number</a>
+          <a class="govuk-button govuk-button--secondary" href="/international-arrivals/{{version}}/registered-with-GP-person-1">Continue without NHS number</a>
         </div>
 
       </form>
