--- a/app/views/international-arrivals/v4/nhs-number-known.html
+++ b/app/views/international-arrivals/v4/nhs-number-known.html
@@ -46,17 +46,17 @@
               </h1>
             </legend>
 
-            <span id="nhs-number-known-hint" class="govuk-body">
+            <p class="govuk-body">
               An NHS number is a 10-digit number, for example, 485 777 3456. You can find it on any letter the NHS has sent you, on a prescription, or by logging in to a GP practice online service.<br><br>
               In Scotland, it's known as CHI number. In Northern Ireland, it's known as an H&C number.<br><br>
               It's OK if you do not have an NHS number or you do not live in the UK, you can still continue.
-            </span>
+            </p>
 
-            <p class="govuk-!-margin-top-5"><a class="govuk-link" href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/">Look up your NHS number</a></p>
+            <p class="govuk-!-margin-top-5"><a class="govuk-link" href="https://www.nhs.uk/using-the-nhs/about-the-nhs/what-is-an-nhs-number/" target="blank">Look up NHS number (opens in new tab)</a></p>
 
             <div class="govuk-form-group govuk-!-margin-bottom-3">
               <label class="govuk-label" for="nhs-number">
-                <strong>What is {{ data['first-name'] or "Pete" }} {{ data['last-name'] or "Smith" }}'s NHS number?</strong>
+                <strong>What is your NHS number?</strong>
               </label>
               <input class="govuk-input govuk-input--width-10" id="nhs-number" name="nhs-number" type="text" value="{{ data['nhs-number'] }}">
             </div>
