--- a/app/views/international-arrivals/v4/order-summary.html
+++ b/app/views/international-arrivals/v4/order-summary.html
@@ -31,10 +31,10 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-8">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            {{ data['first-name'] or 'Jonny' }} {{ data['last-name'] or 'Smith' }}
+            {{ data['first-name'] or 'Jon' }} {{ data['last-name'] or 'Appleseed' }}
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['email-address'] or 'email@example.com' }}<br>
+            {{ data['email-address'] or 'j.appleseed@example.com' }}<br>
             {{ data['mobile-phone-number'] or '+447782808451' }}
           </dd>
           <dd class="govuk-summary-list__actions">
@@ -176,7 +176,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="confirm" name="confirm" type="checkbox" value="Yes" onclick="checkBox()">
               <label class="govuk-label govuk-checkboxes__label" for="confirm">
-                I agree to the terms and conditions
+                I agree to the <a href="#" target="blank" class="govuk-link">terms and conditions (opens in a new tab)</a>
               </label>
             </div>
           </div>
