--- a/app/views/international-arrivals/v4/vaccine-person-1.html
+++ b/app/views/international-arrivals/v4/vaccine-person-1.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/international-arrivals/{{version}}/email-address-person-1">Back</a>
+  <a class="govuk-back-link" href="javascript:window.history.go(-1);">Back</a>
 
 {% endblock %}
 
@@ -31,12 +31,12 @@
           <fieldset class="govuk-fieldset govuk-!-margin-bottom-7" aria-describedby="vaccine-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
-                Has {{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Wilson' }} had the coronavirus vaccine?
+                Has {{ data['first-name-person-1'] or 'Sophie' }} {{ data['last-name-person-1'] or 'Appleseed' }} had the coronavirus vaccine?
               </h1>
             </legend>
-            <span id="vaccine-hint" class="govuk-body">
+            <div id="vaccine-hint" class="govuk-hint">
               We are asking this question to better understand how effective the vaccine is.
-            </span>
+            </div>
             <div class="govuk-radios govuk-!-margin-top-5">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="vaccine-2-person-1" name="vaccine-person-1" type="radio" value="Yes, they've had 1 dose" {{ checked("vaccine-person-1", "Yes, they've had 1 dose") }}>
