--- a/app/views/antigen/v2/govuk/get-coronavirus-test.html
+++ b/app/views/antigen/v2/govuk/get-coronavirus-test.html
@@ -478,8 +478,15 @@
                   <section aria-label="notice" role="region">
                     <div class="app-c-header-notice__content" style="border: none; padding: 0">
                       <div style="border-top: 2px solid #1d70b8" class="govuk-!-padding-top-3">
-                        <h2 class="govuk-heading-s">Related content</h2>
+                        <h3 class="govuk-heading-s">Related content</h3>
                         <p class="govuk-body-s"><a href="https://www.gov.uk/apply-coronavirus-test-care-home">Get coronavirus tests for a care home</a></p>
+                      </div>
+                    </div>
+                    <div class="app-c-header-notice__content" style="border: none; padding: 0">
+                      <div style="border-top: 2px solid #1d70b8; background-color: #f3f2f1;" class="govuk-!-padding-3">
+                        <h3 class="govuk-heading-s">COVID-19 vaccinations</h3>
+                        <p class="govuk-body-s"><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/">Book your coronavirus vaccination and booster dose on the NHS website
+                        </a></p>
                       </div>
                     </div>
                   </section>
