--- a/app/views/antigen/v1/global-registration/1-have-you-travelled-overseas.html
+++ b/app/views/antigen/v1/global-registration/1-have-you-travelled-overseas.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Did the person travel to any countries outside the UK and Ireland within the last 14 days?" %}
+{% set pageTitle = "Did they travel to any countries outside the UK and Ireland within the last 14 days?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -37,7 +37,7 @@
                         </h1>
                     </legend>
                     <span id="travelled-overseas-hint" class="govuk-body">
-                        This will help us test the vaccine against different forms of coronavirus from different countries.<br><br> 
+                        This will help us test the vaccine against different forms of coronavirus from different countries.<br><br>
                       </span>
 
                     <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
@@ -50,7 +50,7 @@
                         </div>
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="have-you-travelled-overseas-2" name="have-you-travelled-overseas" type="radio" value="No" {{ checked("have-you-travelled-overseas", "No") }}>
-                            <label class="govuk-label govuk-radios__label" for="v-2">
+                            <label class="govuk-label govuk-radios__label" for="have-you-travelled-overseas-2">
                                 No, they did not travel overseas
                             </label>
                         </div>
