--- a/app/views/antigen/v1/global-registration/address.html
+++ b/app/views/antigen/v1/global-registration/address.html
@@ -37,12 +37,12 @@
     
               <span id="post-code-hint" class="govuk-body">
                 <strong>Use the address registered with their GP.</strong><br><br>
-                This will help us find and update the GP record with their result.<br><br>
+                This will help us find and update the GP record with their results.<br><br>
                 If they're not registered with a GP in the UK, use the address where they're staying.
               </span>
             <div class="govuk-form-group govuk-!-margin-top-6">
               <label class="govuk-label govuk-!-margin-bottom-3" for="gp-postcode" style="line-height: 0.8;">
-                <strong>Postcode</strong>
+                Postcode
               </label>
               <input class="govuk-input govuk-input--width-10" id="gp-postcode" name="gp-postcode" type="text" autocomplete="postal-code" value="{{ data['gp-postcode'] }}" autofocus>
             </div>
@@ -62,7 +62,7 @@
     
               <span id="post-code-hint" class="govuk-body">
                 <strong>Use the address registered with their GP.</strong><br><br>
-                This will help us find and update the GP record with their result.<br><br>
+                This will help us find and update the GP record with their results.<br><br>
                 If they're not registered with a GP in the UK, use the address where they're staying.
               </span>
             <p class="govuk-!-margin-bottom-6 govuk-!-margin-top-6" style="line-height: 0.8;">
