--- a/app/views/antigen/v1/global-registration/check-your-answers.html
+++ b/app/views/antigen/v1/global-registration/check-your-answers.html
@@ -215,7 +215,7 @@
             </a>
           </dd>
         </div>
-        <div class="govuk-summary-list__row">
+        <!-- <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Occupation
           </dt>
@@ -228,7 +228,7 @@
               <span class="govuk-visually-hidden">occupation</span>
             </a>
           </dd>
-        </div>
+        </div> -->
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             Employer
@@ -324,7 +324,7 @@
             {{ data['vaccine'] or 'No' }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="/antigen/{{version}}/global-registration/coronavirus-vaccine">
+            <a href="/antigen/{{version}}/global-registration/vaccine">
               Change
               <span class="govuk-visually-hidden">had coronavirus vaccine</span>
             </a>
@@ -341,7 +341,7 @@
               More than 14 days ago
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a href="/antigen/{{version}}/global-registration/coronavirus-vaccine-date">
+              <a href="/antigen/{{version}}/global-registration/vaccine-date">
                 Change
                 <span class="govuk-visually-hidden">last dose</span>
               </a>
