--- a/app/views/antigen/v1/order-home-test-kit/confirmation-email.html
+++ b/app/views/antigen/v1/order-home-test-kit/confirmation-email.html
@@ -29,6 +29,18 @@
         <li>Follow the instructions on how to return the kit</li>
      </ol>
 
+     <div class="govuk-inset-text">
+    Royal Mail will be collecting from postboxes at different times over the Christmas period. Check the Royal Mail website for your nearest priority postbox and their collection times:  <a href="https://www.royalmail.com/priority-postboxes">https://www.royalmail.com/priority-postboxes</a>
+  </div>
+
+
+
+
+
+     <p class="govuk-body">
+      If you have symptoms, self-isolate straight away until you get your test results. Do not leave home, except to post your test kit. Check if people you live with need to self-isolate by going to <a href="https://www.nhs.uk/coronavirus" class="govuk-link">https://www.nhs.uk/coronavirus</a> and reading ‘Self-isolation and treating symptoms’.
+    </p>
+
      <p class="govuk-body">Your kit may be different to the one in the video. Make sure you follow the instructions in your kit.</p>
 
      <!-- <div class="govuk-warning-text govuk-!-margin-top-7">
@@ -39,11 +51,16 @@
       </strong>
     </div> -->
 
-     <h2 class="govuk-heading-m">Read the test kit instructions for how to test people of different ages</h2>
+     <h2 class="govuk-heading-m">Read the test kit instructions for how to test people of different ages.</h2>
+
+     <h2 class="govuk-heading-m">Get help to take the test</h2>
+    <p class="govuk-body">
+      To have a live video call with trained staff download the free Be My Eyes app and go to the 'specialised help' section.
+    </p>
 
      <h2 class="govuk-heading-m">Instructions in alternative formats</h2>
      <p class="govuk-body">
-      Royal National Institute of Blind People (RNIB) can send you braille, audio or large print instructions. <a class="govuk-link" href="#">Order online</a> or call 0303 123 9999 (Monday to Friday 8am to 8pm and Saturday 9am to 1pm).
+      Royal National Institute of Blind People (RNIB) can send you braille, audio or large print instructions.Order online at: <a href="https://www.rnib.org.uk/covidtest">https://www.rnib.org.uk/covidtest</a> or call 0303 123 9999 (Monday to Friday 8am to 8pm and Saturday 9am to 1pm).
     </p>
 
      <!-- <ul class="govuk-list govuk-list--bullet">
@@ -64,17 +81,19 @@
 
      <p class="govuk-body">We'll send your test results to you by text and email. If you have symptoms, you must self-isolate until you get your results. If you do not have symptoms, follow the latest government guidance at <a class="govuk-link" href="#">https://www.gov.uk/coronavirus</a> until you get your results.</p>
      <p class="govuk-body">
-      If you test positive for coronavirus, we'll call you to find out who you may have come into contact with. We'll then contact them confidentially to tell them to self-isolate.<br><br>
+      If you test positive for coronavirus, we'll call you to find out who you may have come into contact with. We'll then contact them confidentially, to tell them to self-isolate.<br><br>
       If you have the NHS COVID-19 app and agree for it to anonymously alert anyone you've been in close contact with, the app will also tell them to self-isolate. To find out more visit <a class="govuk-link" href="#">https://covid19.nhs.uk</a>
+    </p>
+
+    <h2 class="govuk-heading-m">Antibody testing</h2>
+    <p class="govuk-body govuk-!-margin-bottom-8">
+      If you agreed to do antibody testing, you will receive your first antibody test kit in the post 2 to 3 days after you get a positive PCR test result. Your 2nd antibody test kit will arrive 3 weeks after the first one.<br><br>
+      The kit provides clear instructions on how to do the test. It’s important you do the test and post it back as soon as possible. You can leave home to post a test kit whilst self-isolating. Find more info on how to prepare for, take and return the antibody test: <a href="https://www.gov.uk/guidance/coronavirus-antibody-home-test-kit-taking-a-blood-sample">https://www.gov.uk/guidance/coronavirus-antibody-home-test-kit-taking-a-blood-sample</a>
     </p>
 
      <h2 class="govuk-heading-m">Getting help</h2>
 
-     <p class="govuk-body">If you have any problems, call the helpline (open from 7am to 11pm):</p>
-     <ul class="govuk-list govuk-list--bullet">
-        <li>England, Wales and Northern Ireland - call 119 (free from mobiles and landlines)</li>
-        <li>Scotland - call 0300 303 2713 (charged at your standard network rate)</li>
-      </ul>
+     <p class="govuk-body">If you need help, call 119 (free from mobiles and landlines). Lines are open 7am to 11pm.</p>
 
     </div>
   </div>
