--- a/app/views/antigen/v1/refer-and-triage/follow-up-test.html
+++ b/app/views/antigen/v1/refer-and-triage/follow-up-test.html
@@ -28,14 +28,14 @@
         <form action="/antigen/{{version}}/action3/follow-up-test" method="post">
 
             <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset" aria-describedby="symptoms-hint symptoms-2-hint">
+                <fieldset class="govuk-fieldset">
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                         <h1 class="govuk-heading-xl govuk-!-margin-bottom-8">
                             {{ pageTitle }}
                         </h1>
                     </legend>
                     <span id="follow-up-test-hint" class="govuk-body">
-                        For example, their first PCR test could not be read (void) or they need to confirm a positive lateral flow test.
+                        For example, their first PCR test could not be read (void), they need to confirm a positive lateral flow test or they’ve been advised by a clinician.
                     </span>
                     <div class="govuk-radios govuk-!-margin-top-5">
                         <div class="govuk-radios__item">
