--- a/app/views/antigen/v2/global-registration/coronavirus-vaccine-date.html
+++ b/app/views/antigen/v2/global-registration/coronavirus-vaccine-date.html
@@ -28,24 +28,24 @@
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
                 Date of vaccine
               </h1>
             </legend>
 
-            <p class="govuk-body">
+            <p class="govuk-body govuk-!-margin-top-6">
               We are asking this question to better understand how effective the vaccine is. <br></br>
 
               If the person has only had 1 dose, tell us when they had this dose.<br></br>
 
-              If the person has had 2 or more doses, tell us when they had their most recent dose. This includes boosters. <br></br>
+              If the person has had 2 or more doses, tell us when they had their most recent dose. This includes boosters.
             </p>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--m" for="test-package-booking-reference">
 
-                  When did {{ data['first-name-person-1'] or 'John' }} {{ data['last-name-person-1'] or 'Smith' }} have their most recent vaccine?
+                  When did {{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Smith' }} have their most recent vaccine?
 
               </label>
             </div>
